src/test/deca/context/invalid/renduInter/16-wrong-type-LE-int-bool.deca
{
    int x = 4;
    boolean y = true;
    if( x<=y ){
        print("OK");
    } else {
        print("KO");
    }
}